--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,79 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
+    def versionMajor = 1
+    def versionMinor = 0
+    def versionPatch = 1
+    def versionBuild = 0
+
+    ext.versions = [
+            'compileSdk': 26,
+            'buildTools': '26.0.2',
+            'minSdk': 21,
+            'targetSdk': 26,
+
+            'versionCode' : versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild,
+            'versionName' : "${versionMajor}.${versionMinor}.${versionPatch}",
+
+            'supportLibrary': '26.1.0',
+            'constraintLayout': '1.1.0-beta5',
+            'googlePlayServices': '11.8.0',
+            'dagger': '2.14.1',
+            'leakCanary': '1.5.1',
+            'mosby': '3.1.0',
+            'retrofit': '2.3.0',
+            'permissionsDispatcher': '3.1.0'
+    ]
+
+    ext.deps = [
+            'support': [
+                    'v4': "com.android.support:support-v4:${versions.supportLibrary}",
+                    'v13': "com.android.support:support-v13:${versions.supportLibrary}",
+                    'appCompat': "com.android.support:appcompat-v7:${versions.supportLibrary}",
+                    'annotations': "com.android.support:support-annotations:${versions.supportLibrary}",
+                    'design': "com.android.support:design:${versions.supportLibrary}",
+                    'recyclerView': "com.android.support:recyclerview-v7:${versions.supportLibrary}",
+                    'cardView': "com.android.support:cardview-v7:${versions.supportLibrary}",
+                    'palette': "com.android.support:palette-v7:${versions.supportLibrary}",
+                    'constraintLayout': "com.android.support.constraint:constraint-layout:${versions.constraintLayout}",
+            ],
+            'dagger': [
+                    'runtime': "com.google.dagger:dagger:${versions.dagger}",
+                    'compiler': "com.google.dagger:dagger-compiler:${versions.dagger}",
+            ],
+            'daggerAndroid': [
+                    'runtime': "com.google.dagger:dagger-android-support:${versions.dagger}",
+                    'compiler':"com.google.dagger:dagger-android-processor:${versions.dagger}"
+            ],
+            'leakCanary': [
+                    'real': "com.squareup.leakcanary:leakcanary-android:${versions.leakCanary}",
+                    'noOp': "com.squareup.leakcanary:leakcanary-android-no-op:${versions.leakCanary}",
+            ],
+            'mosby': [
+                    'core': "com.hannesdorfmann.mosby3:mvp:${versions.mosby}",
+                    'viewState': "com.hannesdorfmann.mosby3:viewstate:${versions.mosby}",
+            ],
+            'retrofit': [
+                    'base': "com.squareup.retrofit2:retrofit:${versions.retrofit}",
+                    'gson': "com.squareup.retrofit2:converter-gson:${versions.retrofit}",
+            ],
+            'permissionsDispatcher': [
+                    'runtime': "com.github.hotchemi:permissionsdispatcher:${versions.permissionsDispatcher}",
+                    'compiler': "com.github.hotchemi:permissionsdispatcher-processor:${versions.permissionsDispatcher}",
+            ],
+            'googlePlayServices': [
+                    'location': "com.google.android.gms:play-services-location:${versions.googlePlayServices}",
+            ],
+            'fabric':[
+                    "gradlePlugin": "io.fabric.tools:gradle:1.25.1",
+                    'crashlytics': 'com.crashlytics.sdk.android:crashlytics:2.9.1@aar'
+            ],
+            'test': [
+                    'junit': "junit:junit:4.12",
+                    'mockito': "org.mockito:mockito-core:2.10.0",
+            ],
+            'okHttpLogginInterceptor': 'com.squareup.okhttp3:logging-interceptor:3.9.0',
+            'timber': 'com.jakewharton.timber:timber:4.6.1',
+            'stetho': 'com.facebook.stetho:stetho-okhttp3:1.5.0',
+    ]
     
     repositories {
         google()
@@ -8,10 +81,6 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
