--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            debuggable true
+            minifyEnabled false
+        }
+
         release {
+            debuggable false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -29,6 +35,10 @@ dependencies {
     // Support
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    // Leak Canary
+    debugImplementation deps.leakCanary.real
+    releaseImplementation deps.leakCanary.noOp
 
     // Unit tests
     testImplementation 'junit:junit:4.12'
