--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,14 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    // Dagger
+    implementation deps.dagger.runtime
+    annotationProcessor deps.dagger.compiler
+
+    // Dagger.Android
+    implementation deps.daggerAndroid.runtime
+    annotationProcessor deps.daggerAndroid.compiler
+
     // Leak Canary
     debugImplementation deps.leakCanary.real
     releaseImplementation deps.leakCanary.noOp
