Implement fetching popular movies list with pagination

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,14 +27,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Support
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation deps.support.appCompat
+    implementation deps.support.constraintLayout
+    implementation deps.support.recyclerView
 
     // Dagger
     implementation deps.dagger.runtime
@@ -61,7 +67,7 @@ dependencies {
     implementation deps.timber
 
     // Unit tests
-    testImplementation 'junit:junit:4.12'
+    testImplementation deps.test.junit
 
     // Instrumented tests
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
