--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".features.detail.DetailActivity" />
+
     </application>
 
 </manifest>
