Polish movie detail screen design

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation deps.support.appCompat
     implementation deps.support.constraintLayout
     implementation deps.support.recyclerView
+    implementation deps.support.design
 
     // Dagger
     implementation deps.dagger.runtime
