--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
             'versionName' : "${versionMajor}.${versionMinor}.${versionPatch}",
 
             'supportLibrary': '27.1.0',
-            'constraintLayout': '1.1.0-beta5',
+            'constraintLayout': '1.0.2',
             'dagger': '2.14.1',
             'leakCanary': '1.5.1',
             'mosby': '3.1.0',
